// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content component test should render without crash with props 1`] = `
<div
  className="content contentCLass"
/>
`;

exports[`Content component test should render without crash without props 1`] = `
<div
  className="content "
/>
`;
